feat: Implement invitation system with email notifications
- Add SendInvitationRequestDto for invitation requests.
- Create AuthorizedApplicationDto and AuthorizedApplicationResponseDto for user application data.
- Implement UpdateUserInforRequestDto for user information updates.
- Add UserSearchResultDto for user search results.
- Create ClientInvitation entity to manage client invitations.
- Implement EmailOutbox entity for email sending queue.
- Define EmailStatus and InvitationStatus enums for managing statuses.
- Create ClientInvitationRepository and EmailOutboxRepository for data access.
- Implement InvitationExpiryScheduler for automatic invitation expiration.
- Develop EmailOutboxProcessor for processing email sending.
- Create EmailOutboxService for queuing emails.
- Implement InvitationService for managing invitations (send, accept, decline, revoke).
- Add UserManageService for user management functionalities.
- Create invitation email template using Thymeleaf.